<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_balloon">

    </com.google.android.gms.ads.AdView>

    <RelativeLayout
        android:id="@+id/gameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ad">



        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/original_surfer"
                android:text="@string/level_label"
                android:textColor="@color/primary_dark"
                android:textSize="@dimen/status_text_size"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/level_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_end_1"
                android:fontFamily="@font/original_surfer"
                android:gravity="end"
                android:text="@string/level"
                android:textColor="@color/accent"
                android:textSize="@dimen/status_text_size"
                android:layout_toEndOf="@id/level"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/original_surfer"
                android:text="@string/score_label"
                android:textColor="@color/primary_dark"
                android:textSize="@dimen/status_text_size"
                android:layout_below="@+id/level"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/score_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin"
                android:fontFamily="@font/original_surfer"
                android:layout_below="@+id/level"
                android:layout_toEndOf="@id/level"
                android:gravity="end"
                android:text="@string/level"
                android:textColor="@color/accent"
                android:textSize="@dimen/status_text_size"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/heart1"
                android:layout_width="@dimen/heart_size"
                android:layout_height="@dimen/heart_size"
                android:contentDescription="@string/game_life"
                app:srcCompat="@drawable/heart"
                tools:ignore="VectorDrawableCompat" />

            <ImageView
                android:id="@+id/heart2"
                android:layout_width="@dimen/heart_size"
                android:layout_height="@dimen/heart_size"
                android:contentDescription="@string/game_life"
                app:srcCompat="@drawable/heart"
                tools:ignore="VectorDrawableCompat" />

            <ImageView
                android:id="@+id/heart3"
                android:layout_width="@dimen/heart_size"
                android:layout_height="@dimen/heart_size"
                android:contentDescription="@string/game_life"
                app:srcCompat="@drawable/heart"
                tools:ignore="VectorDrawableCompat" />

            <ImageView
                android:id="@+id/heart4"
                android:layout_width="@dimen/heart_size"
                android:layout_height="@dimen/heart_size"
                android:contentDescription="@string/game_life"
                app:srcCompat="@drawable/heart"
                tools:ignore="VectorDrawableCompat" />

            <ImageView
                android:id="@+id/heart5"
                android:layout_width="@dimen/heart_size"
                android:layout_height="@dimen/heart_size"
                android:contentDescription="@string/game_life"
                app:srcCompat="@drawable/heart"
                tools:ignore="VectorDrawableCompat" />

        </LinearLayout>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/resumeLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/resumeLayoutTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/resumeCountDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="3"
            android:textSize="30sp"/>


    </LinearLayout>
</RelativeLayout>